welcome.lessons.welcome.array.maxvalue.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
	var a = nums(0)
	for (i <- 1 to nums.length - 1) {
		if (nums(i) > a) a = nums(i)
	}
	return max
}
